<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/map"
        android:title="@string/map"
        android:icon="@drawable/ic_map"/>


    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_baseline_phone"/>

    <item
        android:id="@+id/sms"
        android:title="@string/alert"
        android:icon="@drawable/ic_baseline_add_alert_24"/>

    <item
        android:id="@+id/emergency"
        android:title="@string/emergency"
        android:icon="@drawable/ic_baseline_local_hospital_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_gray"/>








</menu>